pushing itinerary errors with some logics

--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -27,7 +27,7 @@
     (click)="$event.stopPropagation()"
   >
     <a href="tel:+916-7864-3466">+916-7864-3466</a>
-    <a routerLink="/contact" (click)="navigateTo('/contact')">FAQ/Help?</a>
+    <a routerLink="/contact" (click)="navigateTo('/contact')">FAQ | Help?</a>
     <a routerLink="/careers" (click)="navigateTo('/careers')">Careers</a>
     <a routerLink="/aboutUs" (click)="navigateTo('/aboutUs')">About us</a>
     <a routerLink="/travelGuide" (click)="navigateTo('/travelGuide')">Travel Guides</a>
