--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -21,7 +21,7 @@
       <div class="section-content">
         <div class="story-image" data-aos="fade-right" data-aos-delay="200">
           <div class="glass-card">
-            <img src="assets/images/sunflower-journey.png" alt="Sunflower Trip Journey">
+            <img src="assets/images/sunflower-journey.webp" alt="Sunflower Trip Journey">
           </div>
         </div>
         <div class="story-text" data-aos="fade-left" data-aos-delay="200">
