--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -23,12 +23,12 @@
           </li>
           <li>
             <i class="fas fa-envelope"></i>
-            <a href="mailto:info@sunflowertrip.com">info&#64;sunflowertrip.com</a><br />
-            <a href="mailto:bookings@sunflowertrip.com">bookings&#64;sunflowertrip.com</a>
+            <a href="mailto:info@thesunflowertrip.com">info&#64;thesunflowertrip.com</a><br />
+            <a href="mailto:bookings@thesunflowertrip.com">bookings&#64;thesunflowertrip.com</a>
           </li>
           <li>
             <i class="fas fa-clock"></i>
-            <span>Mon–Sat: 10:00 AM - 7:00 PM<br />Sunday: Closed</span>
+            <span>Mon–Fri: 10:00 AM - 6:00 PM & Sat: 10:00 AM - 2:00 PM<br />Sunday: Closed</span>
           </li>
         </ul>
 
