--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,19 +4,28 @@
     <app-header></app-header>
     
     <!-- Hero content -->
-    <div class="top__text" appAnimation>explore the world</div>
-    <div>
-      <h1 appAnimation>Beyond The</h1>
+      <div class="hero-content">
+  
+      <!-- left stack -->
+      <div class="top__text" appAnimation>
+     <span class="step1">EXPLORE</span>
+  <span class="step2">THE</span>
+  <span class="step3">WORLD</span>
+      </div>
+    <div class="main-title">
+      <h1 appAnimation>Beyond </h1>
+           <h2 appAnimation>The</h2> 
       <!-- <img class="top__img" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/master/src/assets/images/header-bg2.png?raw=true" alt="Background Image"> -->
       <!-- <div class="romb"></div>
       <div class="romb-left"></div>
       <div class="romb-right"></div>
       <div class="romb-topl"></div>
       <div class="romb-topr"></div> -->
-      <h2 appAnimation>Boundaries</h2>
+      <h1 appAnimation>Boundaries</h1>
+</div>
     </div>
-    <!-- <img class="top__img-bottom" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/header-bg-2.png?raw=true" alt="Bottom Background Image"> -->
     <app-destinations></app-destinations>
+    <!-- <img class="top__img-bottom" src="https://github.com/SaqibShakil303/Sunflowertrip/blob/main/src/assets/images/header-bg-2.png?raw=true" alt="Bottom Background Image"> -->
   </header>
 </section>
 
