--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@
   --accent-color: #6c63ff;
   --text-color: #4a4a4a;
   --white: #4db6ac;
-  --pink: #009688;
+  --pink: #00968798;
   --light-pink: #b2dfdb;
   --dark-pink: #004d40;
   --peacock-blue: #1b2f40;
