fixed log in issue with RBAC

--- a/src/app/admin-layout/dashboard/dashboard.component.html
+++ b/src/app/admin-layout/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+  <div class="container">
+      <h2>Welcome, {{ user?.email }}</h2>
+      <p>Role: {{ user?.role }}</p>
+      <button mat-raised-button color="warn" (click)="logout()">Logout</button>
+    </div>
