--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+  <div class="container">
+      <h2>Login</h2>
+      <form (ngSubmit)="onSubmit()">
+        <mat-form-field>
+          <mat-label>Email</mat-label>
+          <input matInput [(ngModel)]="email" name="email" type="email" required>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Password</mat-label>
+          <input matInput [(ngModel)]="password" name="password" type="password" required>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit">Login</button>
+      </form>
+      <button mat-raised-button color="accent" (click)="googleLogin()">Login with Google</button>
+      <button mat-raised-button color="accent" (click)="truecallerLogin()">Login with Truecaller</button>
+    </div>
