--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 // @import url('https://fonts.googleapis.com/css2?family=Forum&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&family=Playfair+Display:wght@600;700&family=Forum&display=swap');
-
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 *, *::after, *::before {
   margin: 0;
   padding: 0;
