added good styles on log in and sign up

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,16 +1,54 @@
-  <div class="container">
-      <h2>Login</h2>
-      <form (ngSubmit)="onSubmit()">
-        <mat-form-field>
-          <mat-label>Email</mat-label>
-          <input matInput [(ngModel)]="email" name="email" type="email" required>
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Password</mat-label>
-          <input matInput [(ngModel)]="password" name="password" type="password" required>
-        </mat-form-field>
-        <button mat-raised-button color="primary" type="submit">Login</button>
-      </form>
-      <button mat-raised-button color="accent" (click)="googleLogin()">Login with Google</button>
-      <button mat-raised-button color="accent" (click)="truecallerLogin()">Login with Truecaller</button>
+<div class="auth-wrapper">
+  <div class="auth-container">
+    <div class="navigation-links">
+      <a routerLink="/" class="home-link">
+        <i class="fa fa-home"></i> Home
+      </a>
     </div>
+    
+    <h2 class="auth-title">Login</h2>
+    
+    <form (ngSubmit)="onSubmit()">
+      <div class="custom-input-container">
+        <label for="email" [class.filled]="email">Email</label>
+        <input id="email" type="email" [(ngModel)]="email" name="email" required>
+        <i class="fa fa-envelope input-icon"></i>
+      </div>
+      
+      <div class="custom-input-container">
+        <label for="password" [class.filled]="password">Password</label>
+        <input id="password" [type]="hidePassword ? 'password' : 'text'" [(ngModel)]="password" name="password" required>
+        <i class="fa" [ngClass]="hidePassword ? 'fa-eye-slash' : 'fa-eye'" (click)="hidePassword = !hidePassword"></i>
+      </div>
+      
+      <div class="forgot-password">
+        <a routerLink="/forgot-password">Forgot Password?</a>
+      </div>
+      
+      <button type="submit" class="submit-btn">
+        Login
+      </button>
+    </form>
+    
+    <div class="divider">
+      <span>or continue with</span>
+    </div>
+    
+    <!-- <div class="social-login">
+      <button (click)="googleLogin()" class="google-btn">
+        <i class="fa fa-google"></i>
+        <span>Google</span>
+      </button>
+      
+      <button (click)="truecallerLogin()" class="truecaller-btn">
+        <i class="fa fa-phone"></i>
+        <span>Truecaller</span>
+      </button>
+    </div>
+     -->
+    <div class="signup-link">
+      <span>Don't have an account?</span>
+      <a routerLink="/signup">Signup</a>
+    </div>
+  </div>
+</div>
