--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -112,7 +112,7 @@
     </div>
 
     <!-- Our Team -->
-    <div class="content-section our-team" data-aos="fade-up">
+    <!-- <div class="content-section our-team" data-aos="fade-up">
       <div class="section-header">
         <span class="section-accent">Meet The Experts</span>
         <h2>Our Team</h2>
@@ -143,7 +143,7 @@
           <div class="swiper-button-prev"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Testimonials -->
     <div class="content-section testimonials" data-aos="fade-up">
