--- a/src/app/auth/auth-callback.component.scss
+++ b/src/app/auth/auth-callback.component.scss
@@ -7,9 +7,13 @@
   background: linear-gradient(135deg, #004d40, #00796b);
   position: relative;
   padding: 20px;
+  background-image: url("https://images.pexels.com/photos/30348504/pexels-photo-30348504/free-photo-of-winter-morning-in-schladming-austria.jpeg?auto=compress&cs=tinysrgb&w=600");
+  background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .auth-container {
+     
   width: 100%;
   max-width: 420px;
   padding: 30px;
